Created basket item quantity decreasing endpoint and get whole basket by user endpount, inplemented logic on backend and frontend.